--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,3 @@
-/*основной цвет шрифта 
-заголовка черный #212121
-фон #E5E5E5
-героя белый #FFFFFF
-текста серый #757575  голубой #2196F3
-в футере ссылки сероватые rgba(255, 255, 255, 0.6)
-бегграунд кнопок #F5F4FA
-*/
 :root {
   --primary-text-color: #757575;
   --primary-background-color: #e5e5e5;
@@ -19,45 +11,41 @@ body {
   background-color: var(--primary-background-color);
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  line-height: 1.7px;
 }
 
 ul {
   list-style: none;
 }
 
-.logo-1part {
-  font-family: Raleway, sans-serif;
-  color: var(--accent-color);
-  letter-spacing: 0.03em;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-}
-
-.logo-2part {
-  font-family: Raleway, sans-serif;
-  color: var(--title-text-color);
-  letter-spacing: 0.03em;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-}
-
 /*nav*/
-.site-nav .link {
+.nav-logo,
+.link {
   color: var(--title-text-color);
-  font-family: Roboto;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  text-decoration: none;
 }
+.nav-logo{
+  font-family: Raleway, sans-serif;
+  color: var(--title-text-color);
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+}
+.logo-accent{  
+  color: var(--accent-color); 
+}
+
 .site-nav .link.current {
   color: var(--accent-color);
 }
 
+/* Акценты при ховере и фокусе */
 .site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav .link:focus,
+.footer-info .footer-contacts:hover,
+.footer-info .footer-contacts:focus{
   color: var(--accent-color);
 }
 
@@ -72,6 +60,7 @@ ul {
 }
 
 /* Заголовки */
+/* Заголовки h2 */
 .section-title{
 color: var(--title-text-color);
 font-weight: 700;
@@ -81,9 +70,29 @@ text-align: center;
 letter-spacing: 0.03em;  
 }
 
+/* Заголовки h3 */
+/* Заголовки в Студии */
+.features-list-title{
+color: var(--title-text-color);
+font-weight: 700;
+font-size: 14px;
+line-height: 1,14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+}
+
+/* Заголовки в Портфолио */
+.work-list-item .work-list-title{
+color: var(--title-text-color);
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+}
+
 /* Герой */
 .hero-title {
-  color: #ffffff;
+  color: var(--text-accent-color);
   font-weight: 900;
   font-size: 44px;
  line-height: 1.4;
@@ -91,13 +100,27 @@ text-align: center;
 letter-spacing: 0.06em;
 }
 
-/* Секция */
-.features-title{
+/* Текст */
+/* Текст в Студии */
+.features-list-text{
+letter-spacing: 0.03em;
   }
+
+/* Текст в Портфолио */
+.work-list-text{
+color: var(--primary-text-color);  
+font-size: 16px;
+line-height: 1.9px;
+letter-spacing: 0.03em;
+}
+
+.work-list-item{
+  text-decoration: none;
+}
 
 /*footer*/
 .footer-info .footer-address {
-  color: #ffffff;
+  color: var(--text-accent-color);
 }
 
 .footer-info .footer-contacts {
@@ -106,13 +129,14 @@ letter-spacing: 0.06em;
 
 /* Button */
 .hero-button {
-  color: #ffffff;
+  color: var(--text-accent-color);
   background-color: var(--accent-color);
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
   letter-spacing: 0.06em;
+  text-decoration: none;
 }
 
 .button {
@@ -123,6 +147,8 @@ letter-spacing: 0.06em;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+  text-decoration: none;
+  cursor: pointer;
 }
 .button:hover,
 .button:focus{
@@ -133,4 +159,12 @@ letter-spacing: 0.06em;
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+}
+/*footer*/
+.footer-info .footer-address {
+  color: var(--text-accent-color);
+}
+
+.footer-info .footer-contacts {
+  color: rgba(255, 255, 255, 0.6);
 }
