--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
-  line-height: 1.7px;
+  /* line-height: 1.7px; */
 }
 
 ul {
