--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,11 @@
-
 :root {
   --primary-text-color: #757575;
-  --primary-background-color: #e5e5e5;
+  --primary-background-color: #ffffff;
   --title-text-color: #212121;
   --accent-color: #2196f3;
-  --button-background-color: #F5F4FA;
+  --button-background-color: #f5f4fa;
   --text-accent-color: #ffffff;
-  --footer-background-color: #2F303A;
+  --footer-background-color: #2f303a;
 }
 
 body {
@@ -18,7 +17,37 @@ body {
 }
 
 ul {
+  padding: 0;
+  margin: 0;
   list-style: none;
+}
+
+p,
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  /* outline: 4px solid #2196f3; */
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /*nav*/
@@ -28,19 +57,19 @@ ul {
   text-decoration: none;
 }
 
-.contact-link, 
-.link{
-font-weight: 500;
+.contact-link,
+.link {
+  font-weight: 500;
 }
 
 .contact-link,
 .footer-info .footer-address,
-.footer-info .footer-contacts{
-text-decoration: none;
-font-style: normal;
+.footer-info .footer-contacts {
+  text-decoration: none;
+  font-style: normal;
 }
 
-.nav-logo{
+.nav-logo {
   font-family: Raleway, sans-serif;
   color: var(--title-text-color);
   letter-spacing: 0.03em;
@@ -48,10 +77,10 @@ font-style: normal;
   font-size: 26px;
   line-height: 1.2;
 }
-.logo-accent{  
-  color: var(--accent-color); 
+.logo-accent {
+  color: var(--accent-color);
 }
-.nav-logo .logo-white{
+.nav-logo .logo-white {
   color: var(--text-accent-color);
 }
 .site-nav .link.current {
@@ -62,7 +91,7 @@ font-style: normal;
 .site-nav .link:hover,
 .site-nav .link:focus,
 .footer-info .footer-contacts:hover,
-.footer-info .footer-contacts:focus{
+.footer-info .footer-contacts:focus {
   color: var(--accent-color);
 }
 
@@ -78,98 +107,182 @@ font-style: normal;
 
 /* Заголовки */
 /* Заголовки h2 */
-.section-title{
-color: var(--title-text-color);
-font-weight: 700;
-font-size: 36px;
-line-height: 1.2;
-text-align: center;
-letter-spacing: 0.03em;  
+.section-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* Заголовки h3 */
 /* Заголовки в Студии */
-.features-list-title{
-color: var(--title-text-color);
-font-weight: 700;
-font-size: 14px;
-line-height: 1.14;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-}
-.members-title{
-color: var(--title-text-color); 
-font-weight: 500;
-font-size: 16px;
-line-height: 1.12;
-letter-spacing: 0.03em;
+
+.activity.section-title {
+  margin-bottom: 50px;
 }
 
 /* Заголовки в Портфолио */
-.work-list-item .work-list-title{
-color: var(--title-text-color);
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
+.work-list-link .work-list-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+/* Хедер */
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+.item .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.contacts-nav {
+  display: flex;
+  margin-left: auto;
+}
+.contacts-nav .item + .item {
+  margin-left: 50px;
+}
+
+.main-nav {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 
 /* Герой */
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
   color: var(--text-accent-color);
   font-weight: 900;
   font-size: 44px;
- line-height: 1.4;
-text-align: center;
-letter-spacing: 0.06em;
-}
-
-/* Текст */
-/* Текст в Студии */
-.features-list-text{
-letter-spacing: 0.03em;
-  }
-
-.members .members-text{
-font-size: 16px;
-}
-
-/* Текст в Портфолио */
-.work-list-text{
-color: var(--primary-text-color);  
-font-size: 16px;
-line-height: 1.9;
-letter-spacing: 0.03em;
-}
-
-.work-list-item{
-  text-decoration: none;
-}
-
-/*footer*/
-.footer-info .footer-address {
-  color: var(--text-accent-color);
-}
-
-.footer-info .footer-contacts {
-  color: rgba(255, 255, 255, 0.6);
-}
-
-/* Button */
-.hero-button {
-  color: var(--text-accent-color);
-  background-color: var(--accent-color);
-  font-family: inherit;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.8;
+  line-height: 1.4;
   letter-spacing: 0.06em;
-  text-decoration: none;
+  text-transform: uppercase;
+}
+.hero.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 600px;
+  align-items: center;
+}
+.hero {
+  background-color: var(--footer-background-color);
+  text-align: center;
 }
 
+/* Секции */
+/* Преимущества (без заголовка) */
+.features.container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features-list-title {
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.features-list-text {
+  letter-spacing: 0.03em;
+  width: 270px;
+}
+.features-list .features-list-items + .features-list-items {
+  margin-left: 30px;
+}
+
+.features-list {
+  display: flex;
+}
+
+/* Чем мы занимаемся */
+
+.activity-list {
+  display: flex;
+}
+.activity-item:nth-child(-n + 2) {
+  margin-right: 30px;
+}
+.activity.section-title {
+  margin-bottom: 50px;
+}
+.activity-section.container {
+  padding-bottom: 94px;
+}
+
+/* Наша команда */
+.members.container {
+  background-color: var(--button-background-color);
+}
+.members-list .members-text {
+  font-size: 16px;
+}
+.members-list {
+  display: flex;
+  padding-bottom: 94px;
+}
+.members-item:nth-child(-n + 3) {
+  margin-right: 30px;
+}
+.members-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  background-color: var(--primary-background-color);
+}
+.members.section-title {
+  padding-top: 94px;
+  padding-bottom: 50px;
+}
+.members-title {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.12;
+  letter-spacing: 0.03em;
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
+.members-text {
+  padding-bottom: 30px;
+}
+
+/* ПОРТФОЛИО */
+.portfolio.container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.categories {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.categories-item {
+  margin-left: 8px;
+  background-color: var(--button-background-color);
+  border-radius: 4px;
+}
 .categories .button {
   color: var(--title-text-color);
-  background-color: var(--button-background-color)
+  background-color: var(--button-background-color);
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -177,15 +290,71 @@ letter-spacing: 0.03em;
   letter-spacing: 0.03em;
   text-decoration: none;
   cursor: pointer;
+  border: 1px;
+  border-radius: 4px;
+  padding: 6px 22px;
 }
 
-.button{
+.work-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-list-item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+}
+.work-list-item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.work-list-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+.work-list-text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  padding-left: 24px;
+  padding-bottom: 20px;
+}
+.work-list-link {
+  text-decoration: none;
+}
+
+.work-list-title {
+  padding-left: 24px;
+  padding-bottom: 4px;
+}
+
+/* Button */
+.hero-button {
+  display: inline-block;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
   font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.8;
+  letter-spacing: 0.06em;
+  min-width: 200px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  text-align: center;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
+.button {
+  font-family: inherit;
+  cursor: pointer;
+}
 
 .button:hover,
-.button:focus{
+.button:focus {
   color: var(--text-accent-color);
   background-color: var(--accent-color);
   font-family: inherit;
@@ -194,8 +363,9 @@ letter-spacing: 0.03em;
   line-height: 1.6;
   letter-spacing: 0.03em;
 }
-/*footer*/
-footer{
+
+/*Футер*/
+.footer {
   background-color: var(--footer-background-color);
 }
 
@@ -205,4 +375,15 @@ footer{
 
 .footer-info .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.footer.container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer.nav {
+  margin-bottom: 20px;
+}
+.footer-info-item {
+  margin-bottom: 9px;
 }
