--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,8 @@ h3 {
 .contact-link {
   display: flex;
   align-items: center;
+  padding-top: 38px;
+  padding-bottom: 26px;
 }
 
 .contact-link,
@@ -434,6 +436,10 @@ h3 {
   background: #ffffff;
   border: 1px solid #eeeeee;
 }
+.work-list-item:hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .work-list-item:nth-child(3n) {
   margin-right: 0px;
 }
@@ -485,6 +491,8 @@ h3 {
   font-size: 16px;
   line-height: 1.6;
   letter-spacing: 0.03em;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /*Футер*/
@@ -523,6 +531,7 @@ h3 {
 }
 .footer.container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-icons {
