--- a/css/styles.css
+++ b/css/styles.css
@@ -287,6 +287,29 @@ h3 {
 .activity.section {
   padding-bottom: 94px;
 }
+.activity-item .activity-text {
+  position: absolute;
+  display: flex;
+  font-weight: 500;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--primary-background-color);
+  height: 70px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  bottom: 0;
+}
+.activity-item {
+  position: relative;
+}
+.activity-img {
+  display: block;
+}
 
 /* Наша команда */
 
