--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   --button-background-color: #f5f4fa;
   --text-accent-color: #ffffff;
   --footer-background-color: #2f303a;
+  --primary-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -55,6 +56,7 @@ h3 {
 .link {
   color: var(--title-text-color);
   text-decoration: none;
+  transition: color var(--primary-transition);
 }
 
 .contact-link,
@@ -98,6 +100,7 @@ h3 {
   color: var(--text-accent-color);
 }
 .site-nav .link.current {
+  transition: color var(--primary-transition);
   color: var(--accent-color);
 }
 
@@ -125,6 +128,7 @@ h3 {
 /*contacts-nav*/
 .contacts-nav .contact-link {
   color: var(--primary-text-color);
+  transition: color var(--primary-transition);
 }
 
 .contacts-nav .contact-link:hover,
@@ -183,18 +187,22 @@ h3 {
 .contacts-nav .item + .item {
   margin-left: 50px;
 }
+
+.email-icon,
+.phone-icon {
+  margin-right: 10px;
+  fill: currentColor;
+  transition: fill var(--primary-transition);
+}
+
 .email-icon {
   width: 16px;
   height: 12px;
-  margin-right: 5px;
-  fill: currentColor;
 }
 
 .phone-icon {
   width: 15px;
   height: 24px;
-  margin-right: 5px;
-  fill: currentColor;
 }
 
 .contacts.item {
@@ -290,7 +298,7 @@ h3 {
 .activity-item .activity-text {
   position: absolute;
   display: flex;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.14;
   text-align: center;
   letter-spacing: 0.03em;
@@ -373,6 +381,8 @@ h3 {
   justify-content: center;
   align-items: center;
   fill: #afb1b8;
+  transition: fill var(--primary-transition),
+    background-color var(--primary-transition);
 }
 
 .social-links:hover,
@@ -399,30 +409,28 @@ h3 {
   max-width: 170px;
 }
 .clients-icon {
-  color: #afb1b8;
   display: block;
   padding: 16px 32px;
+  color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: fill var(--primary-transition),
+    border-color var(--primary-transition);
 }
 
 .clients-icon:hover,
 .clients-icon:focus {
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
+
 .clients-icon:hover .clients-svg,
 .clients-icon:focus .clients-svg {
   fill: var(--accent-color);
 }
 .clients-svg {
   fill: currentColor;
+  transition: fill var(--primary-transition);
 }
-
-.clients-svg:hover,
-.clients-svg:focus {
-  fill: var(--accent-color);
-}
-
 /* ПОРТФОЛИО */
 .portfolio.section {
   padding-top: 94px;
@@ -453,13 +461,18 @@ h3 {
   border: 1px;
   border-radius: 4px;
   padding: 6px 22px;
+  transition: color var(--primary-transition),
+    background-color var(--primary-transition);
 }
 
 .work-list {
   display: flex;
   flex-wrap: wrap;
 }
-
+.work-list-img {
+  display: block;
+  width: 100%;
+}
 .work-list-item {
   width: 370px;
   margin-right: 30px;
@@ -490,6 +503,29 @@ h3 {
 }
 .work-list-box {
   padding: 20px 24px;
+}
+.work-list-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-list-wrapper-text {
+  position: absolute;
+  height: 100%;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  transform: translateY(100%);
+  transition: transform var(--primary-transition);
+  color: var(--primary-background-color);
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.work-list-item:hover .work-list-wrapper-text {
+  transform: translateY(0%);
 }
 
 /* Button */
@@ -533,10 +569,12 @@ h3 {
 }
 .footer-info .footer-address {
   color: var(--text-accent-color);
+  transition: color var(--primary-transition);
 }
 
 .footer-info .footer-contacts {
   color: rgba(255, 255, 255, 0.6);
+  transition: color var(--primary-transition);
 }
 
 .footer.nav {
@@ -578,11 +616,12 @@ h3 {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   fill: var(--text-accent-color);
+  transition: background-color var(--primary-transition);
 }
+
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
-  border-radius: 50%;
 }
 .footer-icons {
   margin-left: 70px;
