--- a/css/styles.css
+++ b/css/styles.css
@@ -479,6 +479,7 @@ h3 {
   margin-bottom: 30px;
   background: #ffffff;
   border: 1px solid #eeeeee;
+  transition: box-shadow var(--primary-transition);
 }
 .work-list-item:hover,
 .work-list-item:focus {
@@ -548,6 +549,7 @@ h3 {
 .button {
   font-family: inherit;
   cursor: pointer;
+  transition: box-shadow var(--primary-transition);
 }
 
 .button:hover,
@@ -635,4 +637,44 @@ h3 {
 
 .footer-icons-items + .footer-icons-items {
   margin-left: 10px;
+}
+
+/* Модальное окно */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  height: 581px;
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 9px 9px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--primary-background-color);
 }
