--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
   --button-background-color: #f5f4fa;
   --text-accent-color: #ffffff;
   --footer-background-color: #2f303a;
-  --primary-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --primary-transition: 1250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -647,7 +647,10 @@ h3 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--primary-transition),
+    background-color var(--primary-transition);
 }
+
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
@@ -659,7 +662,7 @@ h3 {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
