--- a/css/styles.css
+++ b/css/styles.css
@@ -824,3 +824,69 @@ h3 {
 .modal-check:checked + .modal-check-text svg {
   fill: #ffffff;
 }
+.conditions {
+  font-weight: 400;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+  padding-left: 3px;
+}
+.subscription {
+  margin-left: 93px;
+}
+
+.subscription-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--text-accent-color);
+  margin-bottom: 20px;
+}
+
+.subscription-input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+.subscription-input::placeholder {
+  padding: 15px 0 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.subscription-form {
+  display: flex;
+}
+.letter-icon {
+  margin-left: 10px;
+  fill: var(--text-accent-color);
+}
