--- a/css/styles.css
+++ b/css/styles.css
@@ -604,6 +604,7 @@ h3 {
 }
 .footer.container {
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
 }
 .footer-icons-list {
@@ -675,7 +676,9 @@ h3 {
   position: absolute;
   top: 0;
   right: 0;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 30px;
   height: 30px;
   margin: 9px 9px;
@@ -703,6 +706,14 @@ h3 {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  margin-bottom: 4px;
 }
 
 .modal-input {
@@ -758,6 +769,9 @@ h3 {
   cursor: pointer;
 }
 .modal-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -808,13 +822,13 @@ h3 {
   border: 2px solid #303030;
   border-radius: 2px;
   margin-right: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .check-icon {
   fill: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .modal-check:checked + .modal-check-text span {
   background-color: var(--accent-color);
@@ -827,6 +841,7 @@ h3 {
 .conditions {
   font-weight: 400;
   text-decoration-line: underline;
+  text-decoration-skip-ink: none;
   color: var(--accent-color);
   padding-left: 3px;
 }
