--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,11 @@
-body {
-  color: red;
-}
+@import './utils/vars';
+@import './utils/hidden';
+
+@import './base/common';
+@import './base/reset';
+
+@import './components/container';
+@import './components/section-title';
+
+@import './layout/header';
+@import './layout/hero';
