Добавляет полное распределение файла style.css

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,15 @@
 
 @import './components/container';
 @import './components/section-title';
+@import './components/social';
+@import './components/btn';
+@import './components/modal';
 
 @import './layout/header';
 @import './layout/hero';
+@import './layout/features';
+@import './layout/activity';
+@import './layout/members';
+@import './layout/clients';
+@import './layout/portfolio';
+@import './layout/footer';
