--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --primary-text-color: #757575;
   --primary-background-color: #ffffff;
@@ -76,6 +77,327 @@ h3 {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-bottom: 30px;
+}
+
+.social-items:not(first-child) {
+  margin-right: 10px;
+}
+
+.social-links {
+  width: 44px;
+  height: 44px;
+  display: flex;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+  fill: #afb1b8;
+  transition: fill var(--primary-transition), background-color var(--primary-transition);
+}
+
+.social-links:hover,
+.social-links:focus {
+  fill: var(--text-accent-color);
+  background-color: var(--accent-color);
+}
+
+.button {
+  font-family: inherit;
+  cursor: pointer;
+  transition: box-shadow var(--primary-transition);
+}
+
+.button:hover,
+.button:focus {
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity var(--primary-transition), background-color var(--primary-transition);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 528px;
+  min-height: 581px;
+  padding: 40px;
+  border-radius: 4px;
+  background-color: var(--primary-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+}
+
+.modal-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  margin: 9px 9px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--primary-background-color);
+}
+
+.modal-button-icon {
+  transition: fill var(--primary-transition);
+}
+
+.modal-button:hover .modal-button-icon,
+.modal-button:focus .modal-button-icon {
+  fill: var(--accent-color);
+}
+
+.modal-button:hover,
+.modal-button:focus {
+  cursor: pointer;
+}
+
+.modal-title {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.modal-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  margin-bottom: 4px;
+}
+
+.modal-input {
+  outline: none;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: transparent;
+  padding-left: 30px;
+  font-size: 14px;
+  transition: border-color var(--primary-transition);
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--accent-color);
+  cursor: pointer;
+}
+
+.modal-field {
+  margin-bottom: 10px;
+}
+
+.modal-textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  resize: none;
+  padding: 12px 16px;
+  font-size: 14px;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.submit-button {
+  height: 50px;
+  min-width: 200px;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+  transition: background-color var(--primary-transition);
+}
+
+.submit-button:hover {
+  background-color: #188ce8;
+  cursor: pointer;
+}
+
+.modal-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.modal-check {
+  margin-right: 8px;
+}
+
+.modal-submit-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.modal-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill var(--primary-transition);
+}
+
+.input-wrapper.user {
+  position: relative;
+}
+
+.modal-input::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-input:hover + .modal-icon,
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+
+.modal-check-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+}
+
+.modal-check-text span {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #303030;
+  border-radius: 2px;
+  margin-right: 5px;
+}
+
+.check-icon {
+  fill: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-check:checked + .modal-check-text span {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.modal-check:checked + .modal-check-text svg {
+  fill: #ffffff;
+}
+
+.conditions {
+  font-weight: 400;
+  text-decoration-line: underline;
+  text-decoration-skip-ink: none;
+  color: var(--accent-color);
+}
+
+.subscription {
+  margin-left: 93px;
+}
+
+.subscription-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--text-accent-color);
+  margin-bottom: 20px;
+}
+
+.subscription-input {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscription-input::placeholder {
+  padding: 15px 0 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.subscription-form {
+  display: flex;
+}
+
+.letter-icon {
+  margin-left: 10px;
+  fill: var(--text-accent-color);
 }
 
 .page-header {
@@ -235,5 +557,377 @@ h3 {
   border-color: transparent;
   text-align: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.features.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.features-list-title {
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.features-list-text {
+  letter-spacing: 0.03em;
+  width: 270px;
+}
+
+.features-list .features-list-items + .features-list-items {
+  margin-left: 30px;
+}
+
+.features-list {
+  display: flex;
+}
+
+.features-icon {
+  padding: 25px 100px;
+  margin-bottom: 30px;
+  background-color: var(--button-background-color);
+}
+
+.activity-list {
+  display: flex;
+}
+
+.activity-item:nth-child(-n + 2) {
+  margin-right: 30px;
+}
+
+.activity.section-title {
+  margin-bottom: 50px;
+}
+
+.activity.section {
+  padding-bottom: 94px;
+}
+
+.activity-item .activity-text {
+  position: absolute;
+  display: flex;
+  font-weight: 700;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--primary-background-color);
+  height: 70px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  bottom: 0;
+}
+
+.activity-item {
+  position: relative;
+}
+
+.activity-img {
+  display: block;
+}
+
+.members.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--button-background-color);
+}
+
+.members-list .members-text {
+  font-size: 16px;
+}
+
+.members-list {
+  display: flex;
+}
+
+.members-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  max-width: 270px;
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+  background-color: var(--primary-background-color);
+}
+
+.members.section-title {
+  margin-bottom: 50px;
+}
+
+.members-title {
+  color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.12;
+  letter-spacing: 0.03em;
+  padding-bottom: 10px;
+}
+
+.members-box {
+  padding-top: 30px;
+  padding-bottom: 16px;
+}
+
+.members-item:nth-child(-n + 3) {
+  margin-right: 30px;
+}
+
+.client.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  justify-content: space-between;
+}
+
+.client.section-title {
+  margin-bottom: 50px;
+}
+
+.clients-list {
+  display: flex;
+}
+
+.clients-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.clients-item {
+  max-width: 170px;
+}
+
+.clients-icon {
+  display: block;
+  padding: 16px 32px;
+  color: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition: fill var(--primary-transition), border-color var(--primary-transition);
+}
+
+.clients-icon:hover,
+.clients-icon:focus {
+  border-color: var(--accent-color);
+}
+
+.clients-icon:hover .clients-svg,
+.clients-icon:focus .clients-svg {
+  fill: var(--accent-color);
+}
+
+.clients-svg {
+  fill: currentColor;
+  transition: fill var(--primary-transition);
+}
+
+.portfolio.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.categories {
+  display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+
+.categories-item {
+  margin-left: 8px;
+  background-color: var(--button-background-color);
+  border-radius: 4px;
+}
+
+.categories .button {
+  color: var(--title-text-color);
+  background-color: var(--button-background-color);
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  cursor: pointer;
+  border: 1px;
+  border-radius: 4px;
+  padding: 6px 22px;
+  transition: color var(--primary-transition), background-color var(--primary-transition);
+}
+
+.work-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.work-list-img {
+  display: block;
+  width: 100%;
+}
+
+.work-list-item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  transition: box-shadow var(--primary-transition);
+}
+
+.work-list-item:hover,
+.work-list-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.work-list-item:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.work-list-item:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.work-list-text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+}
+
+.work-list-link {
+  text-decoration: none;
+}
+
+.work-list-link .work-list-title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.work-list-box {
+  padding: 20px 24px;
+}
+
+.work-list-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.work-list-wrapper-text {
+  position: absolute;
+  height: 100%;
+  padding: 63px 24px;
+  top: 0;
+  left: 0;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  transform: translateY(100%);
+  transition: transform var(--primary-transition);
+  color: var(--primary-background-color);
+  background-color: rgba(33, 150, 243, 0.9);
+}
+
+.work-list-item:hover .work-list-wrapper-text {
+  transform: translateY(0%);
+}
+
+.footer {
+  background-color: var(--footer-background-color);
+}
+
+.footer-info .footer-address,
+.footer-info .footer-contacts {
+  text-decoration: none;
+  font-style: normal;
+}
+
+.footer-info .footer-contacts:hover,
+.footer-info .footer-contacts:focus,
+.footer-info .footer-address:hover,
+.footer-info .footer-address:focus {
+  color: var(--accent-color);
+}
+
+.footer-info .footer-address {
+  color: var(--text-accent-color);
+  transition: color var(--primary-transition);
+}
+
+.footer-info .footer-contacts {
+  color: rgba(255, 255, 255, 0.6);
+  transition: color var(--primary-transition);
+}
+
+.footer.nav {
+  margin-bottom: 20px;
+}
+
+.footer-info-item {
+  margin-bottom: 9px;
+}
+
+.footer.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+/* Иконки футера */
+.join {
+  width: 145px;
+  height: 16px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.footer-icons-list {
+  display: flex;
+  margin-top: 20px;
+}
+
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  fill: var(--text-accent-color);
+  transition: background-color var(--primary-transition);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--accent-color);
+}
+
+.footer-icons {
+  margin-left: 70px;
+}
+
+.footer-icons-items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-icons-items + .footer-icons-items {
+  margin-left: 10px;
 }
 /*# sourceMappingURL=main.css.map */
