--- a/css/main.css
+++ b/css/main.css
@@ -115,12 +115,6 @@ h3 {
   transition: box-shadow var(--primary-transition);
 }
 
-.button:hover, .button:focus {
-  color: var(--text-accent-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -750,6 +744,12 @@ h3 {
   border-radius: 4px;
   padding: 6px 22px;
   transition: color var(--primary-transition), background-color var(--primary-transition);
+}
+
+.categories .button:hover, .categories .button:focus {
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .work-list {
