--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -29,6 +29,13 @@
   padding: 6px 22px;
   transition: color var(--primary-transition),
     background-color var(--primary-transition);
+  &:hover,
+  &:focus {
+    color: var(--text-accent-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .work-list {
