--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,12 +8,10 @@
   transition: opacity var(--primary-transition),
     background-color var(--primary-transition);
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
-
 .modal {
   position: absolute;
   top: 50%;
@@ -27,7 +25,6 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
 .modal-button {
   position: absolute;
   top: 0;
@@ -41,18 +38,17 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
   background-color: var(--primary-background-color);
+  &:hover,
+  &:focus {
+    cursor: pointer;
+  }
 }
 .modal-button-icon {
   transition: fill var(--primary-transition);
-}
-
-.modal-button:hover .modal-button-icon,
-.modal-button:focus .modal-button-icon {
-  fill: var(--accent-color);
-}
-.modal-button:hover,
-.modal-button:focus {
-  cursor: pointer;
+  .modal-button:hover &,
+  .modal-button:focus & {
+    fill: var(--accent-color);
+  }
 }
 .modal-title {
   margin-bottom: 12px;
@@ -63,7 +59,6 @@
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
-
 .modal-label {
   font-size: 12px;
   line-height: 1.17;
@@ -71,7 +66,6 @@
   color: var(--primary-text-color);
   margin-bottom: 4px;
 }
-
 .modal-input {
   outline: none;
   width: 100%;
@@ -82,17 +76,18 @@
   padding-left: 30px;
   font-size: 14px;
   transition: border-color var(--primary-transition);
-}
-
-.modal-input:hover,
-.modal-input:focus {
-  border-color: var(--accent-color);
-  cursor: pointer;
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+    cursor: pointer;
+  }
+  &::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+  }
 }
 .modal-field {
   margin-bottom: 10px;
 }
-
 .modal-textarea {
   width: 100%;
   height: 120px;
@@ -118,12 +113,12 @@
   border-color: transparent;
   border-radius: 4px;
   transition: background-color var(--primary-transition);
+  &:hover {
+    background-color: rgba(24, 140, 232, 1);
+    cursor: pointer;
+  }
 }
 
-.submit-button:hover {
-  background-color: rgba(24, 140, 232, 1);
-  cursor: pointer;
-}
 .modal-checkbox {
   display: flex;
   align-items: center;
@@ -149,18 +144,14 @@
   top: 50%;
   transform: translateY(-50%);
   transition: fill var(--primary-transition);
+  .modal-input:hover + &,
+  .modal-input:focus + & {
+    fill: var(--accent-color);
+  }
 }
+
 .input-wrapper.user {
   position: relative;
-}
-
-.modal-input::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-input:hover + .modal-icon,
-.modal-input:focus + .modal-icon {
-  fill: var(--accent-color);
 }
 
 .modal-check-text {
@@ -172,7 +163,7 @@
   color: var(--primary-text-color);
 }
 
-.modal-check-text span {
+.modal-check-icon {
   width: 15px;
   height: 15px;
   border: 2px solid #303030;
@@ -194,6 +185,7 @@
 .modal-check:checked + .modal-check-text svg {
   fill: #ffffff;
 }
+
 .conditions {
   font-weight: 400;
   text-decoration-line: underline;
@@ -229,10 +221,10 @@
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-}
-.subscription-input::placeholder {
-  padding: 15px 0 15px 16px;
-  color: rgba(255, 255, 255, 0.6);
+  &::placeholder {
+    padding: 15px 0 15px 16px;
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
 .subscription-button {
