--- a/css/main.css
+++ b/css/main.css
@@ -578,6 +578,10 @@ h3 {
   background-color: var(--button-background-color);
 }
 
+.activity.section {
+  padding-bottom: 94px;
+}
+
 .activity-list {
   display: flex;
 }
@@ -590,16 +594,16 @@ h3 {
   margin-bottom: 50px;
 }
 
-.activity.section {
-  padding-bottom: 94px;
+.activity-item {
+  position: relative;
 }
 
-.activity-item .activity-text {
+.activity-text {
   position: absolute;
   display: flex;
+  text-align: center;
   font-weight: 700;
   line-height: 1.14;
-  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   background-color: rgba(47, 48, 58, 0.8);
@@ -610,10 +614,6 @@ h3 {
   justify-content: center;
   left: 0;
   bottom: 0;
-}
-
-.activity-item {
-  position: relative;
 }
 
 .activity-img {
@@ -678,12 +678,12 @@ h3 {
   display: flex;
 }
 
-.clients-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .clients-item {
   max-width: 170px;
+}
+
+.clients-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .clients-icon {
@@ -695,19 +695,18 @@ h3 {
   transition: fill var(--primary-transition), border-color var(--primary-transition);
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
+.clients-icon:hover, .clients-icon:focus {
   border-color: var(--accent-color);
-}
-
-.clients-icon:hover .clients-svg,
-.clients-icon:focus .clients-svg {
-  fill: var(--accent-color);
 }
 
 .clients-svg {
   fill: currentColor;
   transition: fill var(--primary-transition);
+}
+
+.clients-icon:hover .clients-svg,
+.clients-icon:focus .clients-svg {
+  fill: var(--accent-color);
 }
 
 .portfolio.section {
