--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -9,12 +9,14 @@
 .clients-list {
   display: flex;
 }
-.clients-item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .clients-item {
   max-width: 170px;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
+
 .clients-icon {
   display: block;
   padding: 16px 32px;
@@ -23,18 +25,17 @@
   border-radius: 4px;
   transition: fill var(--primary-transition),
     border-color var(--primary-transition);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+  }
 }
 
-.clients-icon:hover,
-.clients-icon:focus {
-  border-color: var(--accent-color);
-}
-
-.clients-icon:hover .clients-svg,
-.clients-icon:focus .clients-svg {
-  fill: var(--accent-color);
-}
 .clients-svg {
   fill: currentColor;
   transition: fill var(--primary-transition);
+  .clients-icon:hover &,
+  .clients-icon:focus & {
+    fill: var(--accent-color);
+  }
 }
