--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,39 +1,43 @@
 .footer {
   background-color: var(--footer-background-color);
 }
-.footer-info .footer-address,
-.footer-info .footer-contacts {
-  text-decoration: none;
-  font-style: normal;
+.footer.section {
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
-.footer-info .footer-contacts:hover,
-.footer-info .footer-contacts:focus,
-.footer-info .footer-address:hover,
-.footer-info .footer-address:focus {
-  color: var(--accent-color);
+.footer.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
-.footer-info .footer-address {
-  color: var(--text-accent-color);
-  transition: color var(--primary-transition);
-}
-
-.footer-info .footer-contacts {
-  color: rgba(255, 255, 255, 0.6);
-  transition: color var(--primary-transition);
-}
-
 .footer.nav {
   margin-bottom: 20px;
 }
 .footer-info-item {
   margin-bottom: 9px;
 }
-.footer.section {
-  padding-top: 60px;
-  padding-bottom: 60px;
+.footer-info .footer-address {
+  text-decoration: none;
+  font-style: normal;
+  color: var(--text-accent-color);
+  transition: color var(--primary-transition);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
-/* Иконки футера */
+.footer-info .footer-contacts {
+  text-decoration: none;
+  font-style: normal;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color var(--primary-transition);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
 .join {
   width: 145px;
   height: 16px;
@@ -44,11 +48,7 @@
   text-transform: uppercase;
   color: #ffffff;
 }
-.footer.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
+
 .footer-icons-list {
   display: flex;
   margin-top: 20px;
@@ -63,12 +63,12 @@
   border-radius: 50%;
   fill: var(--text-accent-color);
   transition: background-color var(--primary-transition);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
-  background-color: var(--accent-color);
-}
 .footer-icons {
   margin-left: 70px;
 }
@@ -81,4 +81,7 @@
 
 .footer-icons-items + .footer-icons-items {
   margin-left: 10px;
+}
+.logo-white {
+  color: var(--text-accent-color);
 }
