--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -15,7 +15,8 @@
   letter-spacing: 0.03em;
   width: 270px;
 }
-.features-list .features-list-items + .features-list-items {
+
+.features-list-items + .features-list-items {
   margin-left: 30px;
 }
 
