--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -53,19 +53,19 @@
   background: #ffffff;
   border: 1px solid #eeeeee;
   transition: box-shadow var(--primary-transition);
-}
-.work-list-item:hover,
-.work-list-item:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.work-list-item:nth-child(3n) {
-  margin-right: 0px;
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
-.work-list-item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
 .work-list-text {
   color: var(--primary-text-color);
   font-size: 16px;
@@ -75,7 +75,7 @@
 .work-list-link {
   text-decoration: none;
 }
-.work-list-link .work-list-title {
+.work-list-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -103,8 +103,7 @@
   transition: transform var(--primary-transition);
   color: var(--primary-background-color);
   background-color: rgba(33, 150, 243, 0.9);
-}
-
-.work-list-item:hover .work-list-wrapper-text {
-  transform: translateY(0%);
+  .work-list-item:hover & {
+    transform: translateY(0%);
+  }
 }
